--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>JavaScript is disabled in your browser. Please enable JavaScript to view the canvas.</p>
     </noscript>
     <audio id="bgMusic" autoplay loop>
-        <source src="your-music-file.mp3" type="audio/mpeg">
+        <source src="background.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
